examples/test/testpolicy448.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy448
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key23: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value49
          key27: value18
          key21: value43
      podSelector:
        matchLabels:
          key49: value28
          key2: value20
